// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulkUpdateModal styled components <Field /> renders correctly 1`] = `
.c0 {
  position: relative;
}

<div
  className="sc-fzpkqZ sc-fznAgC c0"
/>
`;

exports[`BulkUpdateModal styled components <FieldErrorText /> renders correctly 1`] = `
.c0 {
  color: #070707;
  margin: 0;
  position: absolute;
  top: 100%;
}

<p
  className="sc-fznLPX sc-fzoaKM c0"
>
  Text
</p>
`;

exports[`BulkUpdateModal styled components <Label /> renders correctly 1`] = `
.c0 {
  display: block;
  margin-bottom: 0.5rem;
  color: #070707;
}

<label
  className="c0"
>
  Label
</label>
`;

exports[`BulkUpdateModal styled components <ModalBody /> renders correctly 1`] = `
.c0 {
  padding: 1.5rem;
  background-color: #FFFFFF;
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

<div
  className="c0"
>
  Modal Body
</div>
`;

exports[`BulkUpdateModal styled components <ModalHeader /> renders correctly 1`] = `
.c0 {
  padding: 1.5rem;
  background-color: #F8F8F8;
  border-bottom: 1px solid #0A169A;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

<div
  className="c0"
>
  Modal Header
</div>
`;

exports[`BulkUpdateModal styled components <NumberInput /> renders correctly 1`] = `
.c0 {
  background-color: #FFFFFF;
  border: 1px solid #999999;
  border-radius: 3px;
  height: 40px;
  margin: 0;
  padding: 0 0.5rem;
  width: 100%;
}

<input
  className="c0"
  placeholder="$ Manual Price"
  type="number"
/>
`;

exports[`BulkUpdateModal styled components <Title /> renders correctly 1`] = `
.c0 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  margin-bottom: 0.25rem;
  color: #070707;
}

<h4
  className="sc-fzoant sc-fzomME c0"
  color="#070707"
>
  Title
</h4>
`;
